--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "bin": "./bin/cloudwatch-librato",
   "engines": {
-    "node": "0.4.x || 0.6.x"
+    "node": "0.8.x"
   },
   "dependencies": {
     "underscore": "1.1.x",
