fix function scope issue, consistent casing on credential vars

--- a/settings.example.json
+++ b/settings.example.json
@@ -1,8 +1,8 @@
 {
     "awskey": "YOUR_AWS_KEY",
     "awssecret": "YOUR_AWS_SECRET",
-    "libratoEmail": "you@example.com",
-    "libratoToken": "YOUR_LIBRATO_METRICS_TOKEN",
+    "libratoemail": "you@example.com",
+    "libratotoken": "YOUR_LIBRATO_METRICS_TOKEN",
     "instanceNameTag": "Name",
     "metrics": [ 
         {
